# Antarctica

./: .gitignore  .gitmodules  Antarctica.sln.DotSettings  CMakeLists.txt  README.md
Animator/: CMakeLists.txt
Antarctica/: CMakeLists.txt  Main.cpp  cpp.hint  shared_stdafx.h  stdafx.h
Antarctica/Abilities/: Ability.h  AbilityBinding.h  AbilityStackComponent.h  AbilitySystem.cpp  AbilitySystem.h  AbilityTriggerComponent.h  AbilityTriggerSystem.cpp  AbilityTriggerSystem.h  BuildAbility.cpp  BuildAbility.h  MoveAbility.cpp  MoveAbility.h  SelectableComponent.h
Antarctica/Abilities/Activators/: AbilityActivator.h  BuildStructureActivator.cpp  BuildStructureActivator.h  InstantMoveActivator.cpp  InstantMoveActivator.h
Antarctica/Camera/: CameraDragSelectComponent.h  CameraScrollComponent.h  PlayerCameraSystem.cpp  PlayerCameraSystem.h  RTSCamera.cpp  RTSCamera.h
Antarctica/Components/: SceneComponent.cpp  SceneComponent.h
Antarctica/Core/: Application.cpp  Application.h  Class.h  InitECS.cpp  SystemContainer.cpp  SystemContainer.h
Antarctica/Debug/: WireframeShader.cpp  WireframeShader.h
Antarctica/Debug/DebugDraw/: DebugDrawComponent.cpp  DebugDrawComponent.h  DebugDrawSystem.cpp  DebugDrawSystem.h  DebugDrawer.cpp  DebugDrawer.h
Antarctica/Debug/ImGui/: ImGuiComponent.cpp  (+7 more)
Antarctica/Game/: BuildingGrid.cpp  BuildingGrid.h  GameState.cpp  GameState.h
Antarctica/GameObjects/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  World.cpp  World.h
Antarctica/Input/: InputCommand.h  InputListener.h  InputQueue.cpp  InputQueue.h  InputSystem.cpp  InputSystem.h
Antarctica/Rendering/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  RenderComponent.cpp  RenderComponent.h  StaticMesh.cpp  StaticMesh.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Antarctica/Systems/: PerformanceMonitorSystem.cpp  PerformanceMonitorSystem.h  System.h  TimeSystem.cpp  TimeSystem.h  TransformUpdateSystem.cpp  TransformUpdateSystem.h
Antarctica/Terrain/: Terrain.cpp  Terrain.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainNavMesh.cpp
AssetManagement/: Asset.h  AssetLoader.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt
AssetManagement/Assets/: Animation.h  Asset.cpp  Asset.h  BVH.cpp  BVH.h  ComputeShader.cpp  ComputeShader.h  DynamicMesh.h  DynamicSubmesh.h  Material.h  Mesh.cpp  Mesh.h  Shader.h  Skeleton.cpp  Skeleton.h  SubmeshData.cpp  SubmeshData.h  Texture.h  Types.h
AssetManagement/Loaders/: AnimationLoader.cpp  AnimationLoader.h  ComputeShaderLoader.cpp  MeshLoader.cpp  ShaderLoader.cpp  SubmeshBuilder.cpp  SubmeshBuilder.h  TextureLoader.cpp
Editor/: CMakeLists.txt  Main.cpp
Renderer/: CMakeLists.txt  CameraData.cpp  CameraData.h  RenderHandle.h  RenderObject.h  RenderSystem.cpp  RenderSystem.h  stdafx.h
Renderer/APIs/: IContext.cpp  IContext.h  Types.h
Renderer/Buffers/: ConstantBuffer.cpp  ConstantBuffer.h  DynamicBuffer.cpp  DynamicBuffer.h  PerCameraBuffer.h  PerObjectBuffer.h  ScratchBufferHandle.cpp  ScratchBufferHandle.h
Renderer/Entities/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedMeshComponent.cpp  AnimatedMeshComponent.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  RenderComponent.cpp  RenderComponent.h  StaticMesh.cpp  StaticMesh.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Renderer/Objects/: ConstantBuffer.cpp  ConstantBuffer.h  MeshObject.cpp  MeshObject.h  ResourceUploader.cpp  ResourceUploader.h  SubmeshData.cpp  SubmeshData.h  SubmeshObject.cpp  SubmeshObject.h  TextureObject.cpp  TextureObject.h
Renderer/Shaders/: MaterialObject.cpp  MaterialObject.h  ShaderCompiler.cpp  ShaderDescriptor.cpp  ShaderDescriptor.h  ShaderObject.cpp  ShaderObject.h
Rendering/: CMakeLists.txt  CameraData.h  RenderObject.h  Renderer.cpp  Renderer.h
Rendering/APIs/: IContext.cpp  IContext.h  Types.h
Rendering/Buffers/: ConstantBuffer.cpp  ConstantBuffer.h  DynamicBuffer.cpp  DynamicBuffer.h  ScratchBufferHandle.cpp  ScratchBufferHandle.h
Rendering/Components/: CameraComponent.h  MeshComponent.h  RenderComponent.h  RenderCullComponent.h
Rendering/Entities/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedMeshComponent.cpp  AnimatedMeshComponent.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  DynamicMeshEntity.cpp  DynamicMeshEntity.h  RenderComponent.cpp  RenderComponent.h  StaticMesh.cpp  StaticMesh.h  StaticMeshComponent.cpp  StaticMeshComponent.h  StaticMeshEntity.cpp  StaticMeshEntity.h
Rendering/Shaders/: ShaderDescriptor.cpp  ShaderDescriptor.h
Rendering/Systems/: CullingSystem.cpp  CullingSystem.h  RenderSystem.cpp  RenderSystem.h  SkinningSystem.cpp  SkinningSystem.h
(+290 files in other folders)
